[gd_scene load_steps=17 format=3 uid="uid://br05f64km1gja"]

[ext_resource type="Script" uid="uid://cfhd032g6w06r" path="res://engine/ship_reactor.gd" id="1_bq62t"]
[ext_resource type="PackedScene" uid="uid://qkrhe31vbry5" path="res://engine/wires/wires.tscn" id="1_l22x7"]
[ext_resource type="Texture2D" uid="uid://c5ssm3ukpupxm" path="res://engine/dashboard.png" id="2_cwfde"]
[ext_resource type="PackedScene" uid="uid://witytlvjln5p" path="res://engine/pump/pump.tscn" id="2_fisw6"]
[ext_resource type="PackedScene" uid="uid://xacteqntlc0g" path="res://engine/gears/gears.tscn" id="3_h3hk1"]
[ext_resource type="Texture2D" uid="uid://bwx5wif5fibmo" path="res://engine/hexagons.png" id="4_i0x48"]
[ext_resource type="Texture2D" uid="uid://dqj8s1i0b4xa3" path="res://engine/light_container.png" id="4_n1y8t"]
[ext_resource type="PackedScene" uid="uid://dcxgbpbmp8dbj" path="res://engine/switches/switches.tscn" id="4_rkv7k"]
[ext_resource type="Texture2D" uid="uid://c8s8gqdmj5hna" path="res://engine/light_red.png" id="5_px8ua"]
[ext_resource type="PackedScene" uid="uid://bs48mw0qglkar" path="res://shared/death_explosion.tscn" id="10_41ejd"]
[ext_resource type="AudioStream" uid="uid://c4uviyrskp0qq" path="res://external_assets/dklon/boom7.wav" id="11_px8ua"]
[ext_resource type="AudioStream" uid="uid://eli37c4c1anp" path="res://external_assets/dklon/boom8.wav" id="12_8om3d"]
[ext_resource type="AudioStream" uid="uid://d3uyc8rjladka" path="res://external_assets/dklon/boom6.wav" id="13_i0xvy"]
[ext_resource type="AudioStream" uid="uid://bmak4pdopaons" path="res://external_assets/circlerun/Triplet Accept Button.wav" id="14_8om3d"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_6iu28"]
random_pitch = 2.0
streams_count = 3
stream_0/stream = ExtResource("11_px8ua")
stream_1/stream = ExtResource("12_8om3d")
stream_2/stream = ExtResource("13_i0xvy")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_i0xvy"]
random_pitch = 1.1
streams_count = 1
stream_0/stream = ExtResource("14_8om3d")

[node name="ShipReactor" type="Node2D" node_paths=PackedStringArray("completed_puzzles")]
script = ExtResource("1_bq62t")
completed_puzzles = [NodePath("Wires"), NodePath("Pump"), NodePath("Gears"), NodePath("Switches")]
start_break_timer = true

[node name="Dashboard" type="Sprite2D" parent="."]
position = Vector2(638, 649)
texture = ExtResource("2_cwfde")

[node name="Hexagons" type="Sprite2D" parent="Dashboard"]
modulate = Color(0.592157, 1, 1, 0.141176)
texture = ExtResource("4_i0x48")

[node name="LightContainer" type="Sprite2D" parent="Dashboard"]
position = Vector2(0, -61)
texture = ExtResource("4_n1y8t")

[node name="Light1" type="Sprite2D" parent="Dashboard/LightContainer"]
unique_name_in_owner = true
position = Vector2(-33, -2)
texture = ExtResource("5_px8ua")

[node name="Light2" type="Sprite2D" parent="Dashboard/LightContainer"]
unique_name_in_owner = true
position = Vector2(-12, -2)
texture = ExtResource("5_px8ua")

[node name="Light3" type="Sprite2D" parent="Dashboard/LightContainer"]
unique_name_in_owner = true
position = Vector2(10, -2)
texture = ExtResource("5_px8ua")

[node name="Light4" type="Sprite2D" parent="Dashboard/LightContainer"]
unique_name_in_owner = true
position = Vector2(31, -2)
texture = ExtResource("5_px8ua")

[node name="Wires" parent="." instance=ExtResource("1_l22x7")]
unique_name_in_owner = true
position = Vector2(243, 587)

[node name="Pump" parent="." instance=ExtResource("2_fisw6")]
unique_name_in_owner = true
position = Vector2(757, 675)

[node name="Gears" parent="." instance=ExtResource("3_h3hk1")]
unique_name_in_owner = true
position = Vector2(529, 652)
scale = Vector2(0.9, 0.9)

[node name="Switches" parent="." instance=ExtResource("4_rkv7k")]
unique_name_in_owner = true
position = Vector2(1000, 612)

[node name="BreakSystemTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 20.0

[node name="WireExplosions" parent="." instance=ExtResource("10_41ejd")]
unique_name_in_owner = true
position = Vector2(335, 645)
amount = 7

[node name="GearExplosions" parent="." instance=ExtResource("10_41ejd")]
unique_name_in_owner = true
position = Vector2(530, 653)
amount = 7

[node name="PumpExplosions" parent="." instance=ExtResource("10_41ejd")]
unique_name_in_owner = true
position = Vector2(801, 665)
amount = 7

[node name="SwitchExplosions" parent="." instance=ExtResource("10_41ejd")]
unique_name_in_owner = true
position = Vector2(1046, 652)
amount = 7

[node name="ExplosionAudio" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_6iu28")

[node name="FixAudio" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_i0xvy")
